--- a/templates/vote.html
+++ b/templates/vote.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 
-{% block title %}Voter pour {{ poste }} - Élections du Club{% endblock %}
+{% block title %}Voter pour {{ poste_texte }} - Élections du Club{% endblock %}
 
 {% block content %}
-    <h2>Voter pour le poste de {{ poste }}</h2>
+    <h2>Voter pour le poste de {{ poste_texte }}</h2>
     {% if candidats %}
         <form method="POST" action="{{ url_for('templates.vote', poste=poste) }}">
             <div>
@@ -15,10 +15,14 @@
                 <div>
                     <input type="radio" id="candidat_{{ candidat.id }}" name="candidat_id" value="{{ candidat.id }}" required>
                     <label for="candidat_{{ candidat.id }}">{{ candidat.nom }}</label>
-                    <p>Programme : {{ candidat.programme }}</p>
+                    <!-- TODO: rajouter un boutton ici pour voir le programme, 
+                     lorsqu'on clique dessus, ça ouvre un popup/canvas qui affiche le programme du candidat -->
+                    {% if poste == 'president'%}
+                        <p>Programme : {{ candidat.programme }}</p>
+                    {% endif %}
                 </div>
             {% endfor %}
-            <button type="submit">Voter</button>
+            <button type="submit" class="btn btn-primary">Voter</button>
         </form>
     {% else %}
         <p>Aucun candidat n'est actuellement enregistré pour ce poste.</p>
