Il reste les resultats

--- a/templates/base.html
+++ b/templates/base.html
@@ -45,7 +45,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 <i>Toi meme tu vois comment ?</i> Licensé en BSD-3</p>
+        <!-- <p>&copy; 2024 - Licensé en BSD-3</p> -->
     </footer>
 
     <script src="{{ url_for('static', filename='bootstrap.min.js') }}"></script>
