--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,7 @@
 {% block title %}Accueil - Élections du Club{% endblock %}
 
 {% block content %}
-<h2>Bienvenue aux élections du club</h2>
+<h2 class="text-center" >Bienvenue aux élections du club</h2>
 
 <div class="container py-5">
     <div class="row g-4">
@@ -59,9 +59,9 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <div class="row">
+                <div class="">
                     <!-- Colonne pour les postes principaux -->
-                    <div class="col-md-6">
+                    <div class="col-md-12">
                         <h6 class="text-uppercase text-muted">Postes Principaux</h6>
                         <ul class="list-group mb-3">
                             <!-- Boucle pour afficher les postes principaux -->
@@ -76,7 +76,7 @@
                     </div>
             
                     <!-- Colonne pour les postes adjoints -->
-                    <div class="col-md-6">
+                    <div class="col-md-12">
                         <h6 class="text-uppercase text-muted">Postes Adjoints</h6>
                         <ul class="list-group">
                             <!-- Boucle pour afficher les postes adjoints -->
