fixing a design bug !

--- a/templates/base.html
+++ b/templates/base.html
@@ -95,7 +95,7 @@
     </header>
 
 
-    <main class="text-center">
+    <main>
         {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
         {% for category, message in messages %}
