--- a/templates/resultats.html
+++ b/templates/resultats.html
@@ -3,7 +3,7 @@
 {% block title %}Résultats des élections - Élections du Club{% endblock %}
 
 {% block content %}
-<h2 class="mb-4">Résultats des élections</h2>
+<h2 class="mb-4 text-center">Résultats des élections</h2>
 
 <div class="row">
     {% for poste, resultats_poste in resultats.items() %}
