--- a/templates/base.html
+++ b/templates/base.html
@@ -110,9 +110,9 @@
         {% block content %}{% endblock %}
     </main>
 
-    <footer>
-        <!-- <p>&copy; 2024 - Licensé en BSD-3</p> -->
-    </footer>
+    <!-- <footer>
+        <p>&copy; 2024 - Licensé en BSD-3</p>
+    </footer> -->
 
     <script src="{{ url_for('static', filename='bootstrap.min.js') }}"></script>
     <script src="{{ url_for('static', filename='chartjs.udm.min.js') }}"></script>
