--- a/templates/base.html
+++ b/templates/base.html
@@ -81,18 +81,24 @@
                     <!-- Lien pour poser une candidature -->
                     <li class="nav-item">
                         <a href="{{ url_for('templates.candidature') }}" class="nav-link">
-                            <i class="fas fa-file-alt"></i> Poser sa candidature
+                            <i class="fas fa-envelope-open"></i> Poser sa candidature
                         </a>
                     </li>
                     {% endif%}
                     {% if phase and phase == 3%}
                     <!-- Bouton pour consulter les résultats, mis en valeur -->
                     <li class="nav-item mt-2 mt-lg-0">
-                        <a href="{{ url_for('templates.resultats') }}" class="btn btn-outline-primary w-100">
-                            <i class="fas fa-check-circle"></i> Consulter les résultats
+                        <a href="{{ url_for('templates.resultats') }}" class="nav-link">
+                            <i class="fas fa-check-circle text-success></i> Consulter les résultats
                         </a>
                     </li>
                     {%endif%}
+
+                    <li class="nav-item mt-2 mt-lg-0">
+                        <a href="{{ url_for('static', filename='CharteClubGI.pdf') }}" target="_blank" class="btn btn-outline-info w-100">
+                            <i class="fas fa-file-alt"></i> Charte du Club GI
+                        </a>
+                    </li>
                 </ul>
             </div>
         </nav>
