Add the logo of Club GI

--- a/templates/base.html
+++ b/templates/base.html
@@ -54,12 +54,12 @@
 </head>
 
 <body>
-    <header class="bg-light shadow-sm mb-4">
+    <header class="bg-light shadow-sm mb-4 pb-0">
         <nav class="navbar navbar-expand-lg navbar-light container">
             <!-- Titre avec icône pour le logo du site -->
-            <h3 class="text-primary text-bleu-600">
-                <i class="fas fa-vote-yea text-bleu-600"></i>
-                <span class="text-bleu-600">Élections - Club GI 2024</span>
+            <h3 class="text-primary text-bleu-600 mt-2">
+            <img height="40px" src="{{url_for('static', filename='logo_bleu.png')}}" alt="" srcset="">
+                <!-- <span class="text-bleu">Elections du bureau</span> -->
             </h3>
 
             <!-- Bouton pour le menu responsive (menu burger) -->
