--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,7 @@
 {% block title %}Accueil - Élections du Club{% endblock %}
 
 {% block content %}
-<h2 class="text-center" >Bienvenue aux élections du club</h2>
+<h2 class="text-center" >Bienvenue aux élections <br> du Nouveau Bureau </h2>
 
 <div class="container py-5">
     <div class="row g-4">
